--- a/assets/scss/_public.scss
+++ b/assets/scss/_public.scss
@@ -1,8 +1,9 @@
 /* This stylesheet is used to style the public-facing components of the plugin. */
 
-html, body {
-  min-height: 100% !important;
+html,
+body {
   height: auto !important;
+  min-height: 100% !important;
 }
 
 .spu-box {
@@ -14,51 +15,62 @@ html, body {
 
 .spu-bg {
   position: fixed;
-  width: 100%;
-  height: 100%;
-  background: #000;
+  z-index: 99999;
   top: 0;
   left: 0;
+
   display: none;
-  z-index: 99999;
+
+  width: 100%;
+  height: 100%;
+
+  background: #000000;
 }
 
 .spu-box {
-  &:before {
-    content: "";
-    display: table;
-  }
-  &:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  zoom: 1;
   position: fixed;
   z-index: 999999;
-  -moz-box-shadow: 0 0 10px 1px #666;
-  -webkit-box-shadow: 0 0 10px 1px #666;
-  box-shadow: 0 0 10px 1px #666;
-  padding: 25px;
-  margin: 10px;
-  -moz-border-radius: 8px;
-  -webkit-border-radius: 8px;
-  border-radius: 8px;
+
+  zoom: 1;
+
   max-width: 100%;
+  margin: 10px;
+  padding: 25px;
+
+  -webkit-border-radius: 8px;
+     -moz-border-radius: 8px;
+          border-radius: 8px;
+  -webkit-box-shadow: 0 0 10px 1px #666666;
+     -moz-box-shadow: 0 0 10px 1px #666666;
+          box-shadow: 0 0 10px 1px #666666;
+  &:before {
+    display: table;
+
+    content: '';
+  }
+  &:after {
+    display: table;
+    clear: both;
+
+    content: '';
+  }
   &.spu-centered {
     margin: 0;
   }
   h1 {
-    margin: 1.414285714rem 0;
     font-size: 1.4em;
+
+    margin: 1.414285714rem 0;
   }
   h2 {
-    margin: 1.414285714rem 0;
     font-size: 1.2em;
+
+    margin: 1.414285714rem 0;
   }
   h3 {
-    margin: 1.414285714rem 0;
     font-size: 1.0em;
+
+    margin: 1.414285714rem 0;
   }
   p {
     margin: 0 0 1.414285714rem;
@@ -69,9 +81,9 @@ html, body {
   }
   &.spu-top-left {
     top: 0;
-    left: 0;
-    bottom: auto;
     right: auto;
+    bottom: auto;
+    left: 0;
   }
   &.spu-top-right {
     top: 0;
@@ -80,15 +92,15 @@ html, body {
     left: auto;
   }
   &.spu-bottom-left {
-    bottom: 0;
-    left: 0;
     top: auto;
     right: auto;
+    bottom: 0;
+    left: 0;
   }
   &.spu-bottom-right {
-    bottom: 0;
-    right: 0;
     top: auto;
+    right: 0;
+    bottom: 0;
     left: auto;
   }
 }
@@ -111,53 +123,67 @@ html, body {
 }
 
 .spu-close {
-  position: absolute;
-  right: 8px;
-  top: 5px;
-  padding: 0;
-  cursor: pointer;
-  background: transparent;
-  border: 0;
-  -webkit-appearance: none;
   font-size: 30px;
   line-height: 1;
-  text-shadow: 0 1px 0 #fff;
+
+  position: absolute;
+  top: 5px;
+  right: 8px;
+
+  padding: 0;
+
+  cursor: pointer;
+
   opacity: .3;
+  color: #000000;
+  border: 0;
+  background: transparent;
+  text-shadow: 0 1px 0 #ffffff;
+
+  -webkit-appearance: none;
   filter: alpha(opacity = 30);
-  color: #000;
 }
 
 p.spu-powered {
   position: absolute;
   bottom: -55px;
+  left: 0;
+
   width: 100%;
+
   text-align: center;
-  color: #fff;
-  left: 0px;
+
+  color: #ffffff;
   a {
-    color: #ccc;
     text-decoration: underline;
+
+    color: #cccccc;
   }
 }
 
 .spu-close {
-  &:hover, &:focus {
-    color: #000;
-    text-decoration: none;
+  &:hover,
+  &:focus {
     cursor: pointer;
+    text-decoration: none;
+
     opacity: .6;
+    color: #000000;
+
     filter: alpha(opacity = 60);
   }
 }
 
 .spu-shortcode {
-  float: left;
   line-height: normal !important;
+
+  float: left;
 }
 
 .spu-facebook-page {
-  text-align: center;
   display: block;
+
+  text-align: center;
 }
 
 .spu-shortcode iframe {
@@ -174,76 +200,84 @@ p.spu-powered {
 
 .spu_shortcodes {
   &:before {
-    content: "";
     display: table;
+
+    content: '';
   }
   &:after {
-    content: "";
     display: table;
     clear: both;
+
+    content: '';
   }
 }
 
 @font-face {
   font-family: 'spufont';
-  src: url('../fonts/spufont.eot?sze5my');
-  src: url('../fonts/spufont.eot?#iefixsze5my') format("embedded-opentype"), url('../fonts/spufont.woff?sze5my') format("woff"), url('../fonts/spufont.ttf?sze5my') format("truetype"), url('../fonts/spufont.svg?sze5my#spufont') format("svg");
   font-weight: normal;
   font-style: normal;
+
+  src: url('../fonts/spufont.eot?#iefixsze5my') format('embedded-opentype'), url('../fonts/spufont.woff?sze5my') format('woff'), url('../fonts/spufont.ttf?sze5my') format('truetype'), url('../fonts/spufont.svg?sze5my#spufont') format('svg');
+  src: url('../fonts/spufont.eot?sze5my');
 }
 
 
-[class^="spu-icon-"], [class*=" spu-icon-"] {
+[class^='spu-icon-'],
+[class*=' spu-icon-'] {
   font-family: 'spufont';
-  speak: none;
-  font-style: normal;
   font-weight: normal;
+  font-style: normal;
   font-variant: normal;
-  text-transform: none;
   line-height: 1;
+
+  text-transform: none;
   /* Better Font Rendering =========== */
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  speak: none;
 }
 
 .spu-icon-envelope:before {
-  content: "\f003";
+  content: '\f003';
 }
 
 .spu-icon-check:before {
-  content: "\f00c";
+  content: '\f00c';
 }
 
 .spu-icon-close:before {
-  content: "\f00d";
+  content: '\f00d';
 }
 
 .spu-icon-eye:before {
-  content: "\f06e";
+  content: '\f06e';
 }
 
 .spu-icon-gears:before {
-  content: "\f085";
+  content: '\f085';
 }
 
 .spu-icon-angle-up:before {
-  content: "\f106";
+  content: '\f106';
 }
 
 .spu-icon-angle-down:before {
-  content: "\f107";
+  content: '\f107';
 }
 
 .spu-icon-spinner:before {
-  content: "\f110";
+  content: '\f110';
 }
 
 .spu-spinner {
-  -webkit-animation: spu-rotate 1s infinite linear;
-  -moz-animation: spu-rotate 1s infinite linear;
-  -o-animation: spu-rotate 1s infinite linear;
-  margin: 5px;
   display: none;
+
+  margin: 5px;
+
+  -webkit-animation: spu-rotate 1s infinite linear;
+     -moz-animation: spu-rotate 1s infinite linear;
+       -o-animation: spu-rotate 1s infinite linear;
 }
 
 @keyframes spu-rotate {
@@ -292,11 +326,11 @@ p.spu-powered {
 
 @media only screen and (max-width: 620px) {
   .spu-box {
-    &.taller-than-viewport {
-      left: 0 !important;
-      top: 100px !important;
-      position: absolute !important;
-    }
     margin: 0;
+    &.taller-than-viewport {
+      position: absolute !important;
+      top: 100px !important;
+      left: 0 !important;
+    }
   }
 }
