--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2487,7 +2487,7 @@ ol {
     padding: 0 0 0 30px;
 
     color: #4a4a4a;
-    background: url(images/blue_tri.png) no-repeat left 2px;
+    background: url(../img/blue_tri.png) no-repeat left 2px;
   }
   a {
     font-family: 'Segoe UI';
